# ticktick-mcp-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  publish.yml
docs/: agent-quickstart.md  agent-usage.md  cli-usage.md  index.md  installation.md  integrations.md  mcp-usage.md  oauth.md  release.md  roadmap.md  zh-CN.md
docs/integrations/: claude-code.md  claude-desktop.md  cursor.md  hermes.md  openclaw.md
docs/plans/: 2026-05-17-phase-2-oauth-task-crud-export.md  2026-05-17-phase-3-auth-hardening-ci.md  2026-05-17-phase-4-release-readiness.md  2026-05-17-ticktask-cli-mcp-plan.md
scripts/: install.sh  npx-wrapper.js
src/ticktask/: __init__.py
src/ticktask/cli/: __init__.py  app.py  auth.py  backup.py  export.py  focus.py  formatters.py  habit.py  integration.py  project.py  report.py  sync.py  task.py
src/ticktask/core/: __init__.py  auth.py  client.py  config.py  constants.py  credentials.py  dates.py  diagnostics.py  errors.py  exporters.py  idempotency.py  models.py  natural_query.py  oauth_server.py  results.py  services.py  sync_state.py  validation.py
src/ticktask/mcp/: __init__.py  prompts.py  resources.py  schemas.py  server.py  tools.py
tests/: test_agent_quickstart_docs.py  test_docs_index.py  test_docs_pages_workflow.py  test_install_script.py  test_integration_docs.py  test_npx_wrapper.py  test_packaging_metadata.py  test_release_workflow.py
tests/cli/: test_auth_cli.py  test_backup_cli.py  test_cli_smoke.py  test_diagnostics_cli.py  test_error_taxonomy_cli.py  test_export_cli.py  test_habit_focus_cli.py  test_integration_cli.py  test_project_cli.py  test_report_cli.py  test_sync_cli.py  test_task_cli.py
tests/core/: test_auth.py  test_client.py  test_config.py  test_dates.py  test_diagnostics.py  test_error_taxonomy.py  test_exporters.py  test_idempotency.py  test_models.py  test_natural_query.py  test_oauth_server.py  test_results.py  test_services.py  test_sync_state.py  test_validation.py
tests/mcp/: test_prompts.py  test_resources.py  test_tools.py
