[project]
name = "ticktask"
version = "0.1.0"
description = "Agent-friendly CLI and MCP server for TickTick and Dida365."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "ticktask contributors"}
]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "mcp>=1.0",
    "pytest>=8.0",
]

[project.scripts]
ticktask = "ticktask.cli.app:app"
tt = "ticktask.cli.app:app"
ticktask-mcp = "ticktask.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
