[project]
name = "ticktick-mcp-cli"
version = "0.1.0"
description = "Agent-friendly CLI and MCP server for TickTick and Dida365."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "TickTick MCP CLI contributors"}
]
keywords = ["ticktick", "dida365", "cli", "mcp", "task-management", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["build>=1.2", "pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/GeekMai90/ticktick-mcp-cli"
Documentation = "https://github.com/GeekMai90/ticktick-mcp-cli#readme"
Issues = "https://github.com/GeekMai90/ticktick-mcp-cli/issues"

[dependency-groups]
dev = [
    "build>=1.2",
    "mcp>=1.0",
    "pytest>=8.0",
]

[project.scripts]
ticktask = "ticktask.cli.app:app"
tt = "ticktask.cli.app:app"
ticktask-mcp = "ticktask.mcp.server:main"
ticktick-mcp-cli = "ticktask.cli.app:app"
ticktick-mcp = "ticktask.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticktask"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ticktask",
  "tests",
  "docs",
  "README.md",
  "README.zh-CN.md",
  "LICENSE",
  "AGENTS.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
